[tool.poetry]
name = "kyberbot"
version = "0.1.0"
description = "Telegram bot to go through the kyberturvallisuuskeskus rss feeds and post news updates to channel"
authors = ["Mikko Viitamäki <mikko.viitamaki+github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"
pytelegrambotapi = "*"
feedparser = "*"

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
